Added rel in the links

--- a/index.html
+++ b/index.html
@@ -47,18 +47,25 @@
       <footer>
         <p>
           This project was coded by
-          <a href="https://github.com/zukiswa-pumla" target="_blank"
+          <a
+            href="https://github.com/zukiswa-pumla"
+            rel="noopener"
+            target="_blank"
             >Zukiswa Seboto</a
           >
           and is
           <a
             href="https://github.com/zukiswa-pumla/Week6-homework"
+            rel="noopener"
             target="_blank"
           >
             on GitHub</a
           >
           and
-          <a href="https://week6-homework-zukiswa.netlify.app/" target="_blank"
+          <a
+            href="https://week6-homework-zukiswa.netlify.app/"
+            rel="noopener"
+            target="_blank"
             >hosted on Netlify</a
           >
         </p>
